--- a/Frontend/about.css
+++ b/Frontend/about.css
@@ -89,3 +89,18 @@ display: flex;
     font-size: 20px;
     font-weight: 600;
 }
+
+
+@media only screen and (max-width: 768px) {
+    .row {
+        flex-direction: column;
+    }
+
+    .image, .content {
+        max-width: 100%;
+    }
+
+    .about .row {
+        gap: 1rem;
+    }
+}
