--- a/Frontend/about.css
+++ b/Frontend/about.css
@@ -10,14 +10,14 @@
     display: block;
     left: 50%;
 } */
-.about .heading span{
+.pabout .pheading span{
 color: #16a085;
 font-size: 50px;
 text-shadow: .4rem .4rem O rgba(O, O, O, .2);
 margin: 4px;
 
 }
-.about .heading {
+.pabout .pheading {
 color: #444;
 font-size: 50px;
 text-shadow: .4rem .4rem O rgba(O, O, O, .2);
@@ -28,26 +28,26 @@ display: flex;
 
 }
 
-.row{
+.prow{
     display: flex;
     justify-content: center;
     align-items: center;
     /* border: 2px solid red; */
 }
-.image{
+.pimage{
     flex: 1;
     max-width: 50%; /* Set maximum width for image section */
     /* border: 2px solid red; */
     height: auto; /* Ensure the image height adjusts automatically */
     overflow: hidden; 
 }
-.image img{
+.pimage img{
     width: 100%;
     height: auto; /* Ensure the image height adjusts automatically */
     object-fit: cover; 
     
 }
-.content{
+.pcontent{
     flex: 1;
     max-width: 50%; /* Set maximum width for content section */
     /* border: 2px solid red; */
@@ -55,35 +55,35 @@ display: flex;
 
 }
 
-.about .row{
+.pabout .prow{
     /* display: flex;
     align-items: center;
     flex-wrap: wrap; */
     gap : 2rem;
 }
-.about .row .image{
+.pabout .prow .pimage{
     flex: 1 1 45rem;
 }
-.about .row .image img{
+.pabout .prow .pimage img{
     width: 100%;
 }
-.about .row .content{
+.pabout .prow .pcontent{
     flex:1 1 45rem;
 }
-.about .row .content h3{
+.pabout .prow .pcontent h3{
     color: #444;
     text-shadow: .4rem .4rem O rgba(O, O, O, .2);
     font-size: 4rem;
     line-height: 1.8;
 }
-.about .row .content p{
+.pabout .prow .pcontent p{
     color: #777;
     padding: 1rem 0;
     font-size: 1.4rem;
     line-height: 1.8;
 }
 
-.content a{
+.pcontent a{
     text-decoration: none;
     color: black;
     font-size: 20px;
@@ -92,15 +92,15 @@ display: flex;
 
 
 @media only screen and (max-width: 768px) {
-    .row {
+    .prow {
         flex-direction: column;
     }
 
-    .image, .content {
+    .pimage, .pcontent {
         max-width: 100%;
     }
 
-    .about .row {
+    .pabout .prow {
         gap: 1rem;
     }
 }
