--- a/views/Home/iconsec.ejs
+++ b/views/Home/iconsec.ejs
@@ -1,1 +1,29 @@
 
+  <body>
+    <section class="icons-container">
+      <div class="icons">
+        <i class="fas"></i>
+        <h3>140+</h3>
+        <p>Doctors at work</p>
+      </div>
+      <div class="icons">
+        <i class="fas"></i>
+        <h3>1040+</h3>
+        <p>Satisfied patients</p>
+      </div>
+      <div class="icons">
+        <i class="fas"></i>
+        <h3>500+</h3>
+        <p>Bed facility</p>
+      </div>
+      <div class="icons">
+        <i class="fas"></i>
+        <h3>80+</h3>
+        <p>Available hospitals</p>
+      </div>
+    </section>
+
+    
+  </body>
+
+
