--- a/public/css/footer.ejs
+++ b/public/css/footer.ejs
@@ -1,1 +1,44 @@
 
+.box .a{
+    text-decoration: none;
+}
+.footer .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 2rem;
+}
+
+.footer .box-container .box h3{
+    font-size: 2.5rem;
+    color: #444;
+    padding: 1rem 0;
+}
+.footer .box-container .box a {
+    display: block;
+    font-size: 1.5rem;
+    color: #777;
+    padding: 1rem 0;
+}
+
+
+.footer .box-container .box a i{
+    padding-right: .5rem;
+    color: #16a085;
+}
+.footer .box-container .box a:hover i {
+    padding-right: .5rem;
+    color: #16a085;
+}
+
+.footer .credit{
+    padding: 1rem;
+    padding-top: 2rem;
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 2rem;
+    color : #777 ;
+    border-top: .1rem solid rgba(0,0,0.1);
+}
+footer .credit span{
+    color :#16a085;
+}
