--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,1 +1,103 @@
+<body>
+    
 
+    <section class="footer">
+        <div class="box-container">
+            <div class="box">
+                <h3>Quick Links</h3>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i> Home
+                </a>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i> Services
+                </a>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i> About
+                </a>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i> Doctors
+                </a>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i> Book
+                </a>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i> Review
+                </a>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i> Blogs
+                </a>
+            </div>
+            
+            <div class="box">
+                <h3>Our Services</h3>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i>
+                    Dental Care
+                </a>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i>
+                    Message Therapy
+                </a>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i>
+                    Cardiology
+                </a>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i>
+                    Diagnosis
+                </a>
+                <a href="#">
+                    <i class="fas fa-chevron-right"></i>
+                    Ambulance Service
+                </a>
+            </div>
+            
+            <div class="box">
+                <h3>Contact Info</h3>
+                <a href="tel:+123-456-7890">
+                    <i class="fas fa-phone"></i> +123-456-7890
+                </a>
+                <a href="tel:+111-222-3333">
+                    <i class="fas fa-phone"></i> +111-222-3333
+                </a>
+                <a href="mailto:shaikhanas@gmail.com">
+                    <i class="fas fa-envelope"></i> abc@gmail.com
+                </a>
+                <a href="mailto:anasbhai@gmail.com">
+                    <i class="fas fa-envelope"></i> pqr@gmail.com
+                </a>
+                <a href="#">
+                    <i class="fas fa-map-marker-alt"></i> Mumbai, India - 4001041
+                </a>
+            </div>
+            
+
+            <div class="box">
+                <h3>Follow Us</h3>
+                <a href="https://www.facebook.com">
+                    <i class="fab fa-facebook-f"></i> Facebook
+                </a>
+                <a href="https://twitter.com">
+                    <i class="fab fa-twitter"></i> Twitter
+                </a>
+                <a href="https://www.instagram.com">
+                    <i class="fab fa-instagram"></i> Instagram
+                </a>
+                <a href="https://www.linkedin.com">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://www.pinterest.com">
+                    <i class="fab fa-pinterest"></i> Pinterest
+                </a>
+            </div>
+            
+
+            <!-- <div class="credit">Created by <span>MRPL</span>. All rights reserved.</div> -->
+
+
+        </div>
+    </section>
+    
+
+
+</body>
