--- a/views/Home/home.ejs
+++ b/views/Home/home.ejs
@@ -1,1 +1,25 @@
+<!-- home section start -->
+<section class="home" id="home">
+  <div class="image">
+    <img src="svg/blood research-amico.svg" alt="" />
+  </div>
+  <div class="content">
+    <h3>stay safe,stay healthy</h3>
+    <p>
+      Our website, E-health, is a comprehensive platform dedicated to promoting
+      health and well-being. Through a user-friendly interface, we provide
+      access to a wide range of healthcare services, including free checkups,
+      24/7 ambulance services, expert consultations, medication provision, and
+      comfortable bed facilities. With over 140 dedicated doctors and a track
+      record of serving over 1040 satisfied patients, we prioritize
+      compassionate care and optimal health outcomes. Our mission is to ensure
+      healthcare accessibility for all, offering preventive care, diagnosis, and
+      treatment solutions. 
+    </p>
+    <a href="" class="m-btn">
+      Contact Us <span class="fas fa-hevron-right"></span
+    ></a>
+  </div>
+</section>
 
+<!-- home section end -->
