--- a/views/Home/doctorcard.ejs
+++ b/views/Home/doctorcard.ejs
@@ -1,3 +1,4 @@
+<% layouts("/layouts/boilerplate") %>
 <!-- doctor section start -->
 <section class="doctors" id="doctors">
     <h1 class="heading">OUR <span>DOCTORS</span></h1>
