--- a/views/Home/doctorcard.ejs
+++ b/views/Home/doctorcard.ejs
@@ -1,4 +1,4 @@
-<% layouts("/layouts/boilerplate") %>
+<% layout("/layouts/boilerplate") %>
 <!-- doctor section start -->
 <section class="doctors" id="doctors">
     <h1 class="heading">OUR <span>DOCTORS</span></h1>
