--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -31,7 +31,7 @@
         <%- body  %>
     </div>
     <!-- this is the boilerplate code and we using it for all pages with ejs-mate -->
-    <%- include("../includes/footer.ejs") %>
+    <!-- <%- include("../includes/footer.ejs") %> -->
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
