--- a/Frontend/footer.css
+++ b/Frontend/footer.css
@@ -1,27 +1,27 @@
 
 
-.footer{
+.pfooter{
     display: block;
     margin: 5px;
     text-align: center;
     
 }
 
-.box .a{
+.pbox .a{
     text-decoration: none;
 }
-.footer .box-container {
+.pfooter .pbox-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1.5rem;
 }
 
-.footer .box-container .box h3{
+.pfooter .pbox-container .pbox h3{
     font-size: 1.8rem;
     color: #444;
     padding: .4rem 0;
 }
-.footer .box-container .box a {
+.pfooter .pbox-container .pbox a {
     text-decoration: none;
     display: block;
     font-size: 1.2rem;
@@ -30,16 +30,16 @@
 }
 
 
-.footer .box-container .box a i{
+.pfooter .pbox-container .pbox a i{
     padding-right: .5rem;
     color: #16a085;
 }
-.footer .box-container .box a:hover i {
+.pfooter .pbox-container .pbox a:hover i {
     padding-right: .5rem;
     color: #16a085;
 }
 
-.footer .credit{
+.pfooter .pcredit{
     padding: 1rem;
     padding-top: 2rem;
     margin-top: 2rem;
@@ -48,6 +48,6 @@
     color : #777 ;
     border-top: .1rem solid rgba(0,0,0.1);
 }
-footer .credit span{
+.pfooter .pcredit span{
     color :#16a085;
 }
