--- a/views/Home/home.ejs
+++ b/views/Home/home.ejs
@@ -1,1 +1,270 @@
+<body>
+<section class="home" id="home">
+    <div class="image">
+      <img src="svg/blood research-amico.svg" alt="" />
+    </div>
+    <div class="content">
+      <h3>stay safe,stay healthy</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem
+        laborum ratione iure ea eum tempora. Est distinctio minima id harum
+        labore, ea perspiciatis, explicabo non quisquam blanditiis dolor
+        consectetur dolorem ipsa ad quia cum quod! Eius illo voluptates
+        placeat natus iusto nisi fugit consequuntur vitae laborum. Debitis
+        magni modi unde.
+      </p>
+      <a href="" class="m-btn">
+        Contact Us <span class="fas fa-hevron-right"></span></a>
+    </div>
+  </section>
+
+  <!-- home section end -->
+
+  <!-- icon-section start  -->
+  <section class="icons-container">
+    <div class="icons">
+      <i class="fas fa-user-md"></i>
+      <h3>140+</h3>
+      <p>Doctors at work</p>
+    </div>
+    <div class="icons">
+      <i class="fas fa-users"></i>
+      <h3>1040+</h3>
+      <p>Satisfied patients</p>
+    </div>
+    <div class="icons">
+      <i class="fas fa-procedures"></i>
+      <h3>500+</h3>
+      <p>Bed facility</p>
+    </div>
+    <div class="icons">
+      <i class="fas fa-hospital"></i>
+      <h3>80+</h3>
+      <p>Available hospitals</p>
+    </div>
+  </section>
+  <!-- icon-section end  -->
+
+    <!-- SERVICES -->
+
+    <section class="services" id="services">
+      <h1 class="heading">Our Services</h1>
+      <div class="box-container">
+        <div class="box">
+            <a href="#" class="btn">
+          <i class="fas"></i>
+          <img
+            src="https://img.freepik.com/free-vector/doctor-examining-patient-clinic-illustrated_23-2148856559.jpg?w=996&t=st=1710589004~exp=1710589604~hmac=77ea749543af693f3acdc8ed7f25972f2c325d0b9fd25765c189a5a25925f1e1"
+            alt=""
+            srcset=""
+          />
+          <h2>Free Checkups</h2>
+          <p>
+            Access to medical examinations without any cost, ensuring healthcare accessibility for all.
+          </p>
+         
+        </div>
+        <div class="box">
+            <a href="#" class="btn">
+          <i class="fas"></i>
+          <img
+            src="https://img.freepik.com/free-vector/ambulance-concept-illustration_114360-6861.jpg?w=996&t=st=1710589080~exp=1710589680~hmac=885910b026a0cc90d4c41154d16013a3a60145bfbcd19926bc4c2b0e9d2ef2dd"
+            alt=""
+            srcset=""
+          />
+          <h2>24/7 Ambulance</h2>
+          <p>
+            Round-the-clock availability of emergency transportation services for swift medical assistance.
+          </p>
+         
+
+        </div>
+        <div class="box">
+            <a href="#" class="btn">
+          <i class="fas"></i>
+          <img
+            src="https://img.freepik.com/free-vector/doctors-concept-illustration_114360-1515.jpg?t=st=1710589157~exp=1710592757~hmac=7a64716272739c5bbf9afb227428e5eebb23e551b69c8da0f8a45cf1ba84555c&w=996"
+            alt=""
+            srcset=""
+          />
+          <h2>Expert Doctors</h2>
+          <p>
+            Consultation and treatment provided by experienced and highly skilled medical professionals.
+          </p>
+          
+        </div>
+        <div class="box">
+            <a href="#" class="btn">
+          <i class="fas"></i>
+          <img
+            src="https://img.freepik.com/free-vector/virus-cure-concept-illustrated_23-2148508689.jpg?t=st=1710589229~exp=1710592829~hmac=aefb823d0c35bb59c295682912365671b69665a343d56b427405b14442a74312&w=740"
+            alt=""
+            srcset=""
+          />
+          <h2>Medicines</h2>
+          <p>
+            Provision of necessary medications to alleviate health issues and promote recovery.
+          </p>
+         
+
+        </div>
+        <div class="box">
+            <a href="#" class="btn">
+          <i class="fas"></i>
+          <img
+            src="https://img.freepik.com/free-vector/people-walking-sitting-hospital-building-city-clinic-glass-exterior-flat-vector-illustration-medical-help-emergency-architecture-healthcare-concept_74855-10130.jpg?t=st=1710589261~exp=1710592861~hmac=af90dfffefc489fa13c11eb9cf3a2dda2911709e258c99b601ded92ba5071862&w=1060"
+            alt=""
+            srcset=""
+          />
+          <h2>Bed Facilities</h2>
+          <p>
+            Rest assured with our comfortable bed facilities, ensuring a conducive environment for recovery.</p>
+           
+
+        </div>
+        <div class="box">
+            <a href="#" class="btn">
+          <i class="fas"></i>
+          <div class="content">
+            <img
+              src="https://img.freepik.com/free-vector/humanization-concept-illustration_114360-21526.jpg?t=st=1710589317~exp=1710592917~hmac=fca48d54231d0d16bb818c5901037c1c4e35f13c5edb85df8442b58370638c34&w=740"
+              alt=""
+              srcset=""
+            />
+            <h2>Total Care</h2>
+            <p>
+                Comprehensive healthcare services aimed at addressing patients' needs holistically, ensuring their well-being and comfort.
+            </p>
+           
+
+          </div>
+        </div>
+      </div>
+    </section>
+<!-- service section end  -->
+
+<!-- about-us start  -->
+<section class="about" id="about">
+  <h1 class="heading"> <span>ABOUT </span> US </h1>
+  <div class="row">
+  <div class="image">
+  <img src="https://img.freepik.com/free-vector/cartoon-healthcare-professionals_23-2148909560.jpg?t=st=1710603330~exp=1710606930~hmac=8d5814dcf68076e9d62fc030e0676320f099f48d038b415e0de915ffddefdb5a&w=740" alt="">
+  </div>
+  <div class="content">
+      <h3>We take care of your life</h3>
+      <p>At [Your Company Name], our mission is to provide exceptional healthcare services tailored to meet your needs. With a dedicated team of medical professionals, cutting-edge facilities, and a commitment to excellence, we ensure that your well-being is our top priority. Whether it's preventive care, diagnosis, or treatment, we're here to support you every step of the way. Trust us to take care of your health, so you can focus on living your best life.</p>
+      <a href="#" class="btn">Learn more </a>
+  </div>
+  </div>
+  
+  </section>
+<!-- about-us end  -->
+
+
+
+  <!-- doctor section start -->
+  <section class="doctors" id="doctors">
+    <h1 class="heading">OUR <span>DOCTORS</span></h1>
+    <div class="row ">
+      <div class="col">
+        <div class="doc-card">
+          <img
+            src="https://media.istockphoto.com/id/484578761/photo/portrait-of-senior-doctor.jpg?s=2048x2048&w=is&k=20&c=cvmxJ8QRS_XXIsjUXfjehEsBtjrqJeCTa2j3qHsEXHU="
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Dr.Ramakrishnan</h5>
+            <p class="card-text">Experienced doctors providing compassionate care and expertise for optimal health</p>
+            
+              <a href="appointment.html" class="mu-btn btn-primary">Book Appoinment</a>
+            
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="doc-card">
+          <img
+            src="https://media.istockphoto.com/id/626121560/photo/young-serious-handsome-bearded-doctor-with-white-coat-and-stethoscope.jpg?s=2048x2048&w=is&k=20&c=G6jPFT2gWfJTj-OpkbStRH5VhFhls0HlunGtUaMHkXg="
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Dr.Akshay Patil</h5>
+            <p class="card-text">Experienced doctors providing compassionate care and expertise for optimal health</p>
+            
+              <a href="appointment.html" class="mu-btn btn-primary">Book Appoinment</a>
+  
+           
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="doc-card">
+          <img
+            src="https://media.istockphoto.com/id/467371167/photo/portrait-of-confident-doctor.jpg?s=2048x2048&w=is&k=20&c=sZHbbL7voKg_5__eGttb-yjAqKkbM16IzSc68o6Qg_U="
+            class=" card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Dr.Surya Joshi</h5>
+            <p class="card-text">Experienced doctors providing compassionate care and expertise for optimal health</p>
+            
+              <a href="appointment.html" class="mu-btn btn-primary">Book Appoinment</a>
+  
+            
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row ">
+      <div class="col">
+        <div class="doc-card">
+          <img
+            src="https://media.istockphoto.com/id/802358926/photo/portrait-of-serious-handsome-young-male-doctor-holding-hand-in-pocket-standing-on-gray.webp?s=2048x2048&w=is&k=20&c=h9pIVs8iQ4-zKU0NMG5UaqYUW0rfi3R3VIRtpZQ6XDQ="
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Dr.Sitaram</h5>
+            <p class="card-text">Experienced doctors providing compassionate care and expertise for optimal health</p>
+            
+              <a href="appointment.html" class="mu-btn btn-primary">Book Appoinment</a>
+  
+            
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="doc-card">
+          <img
+            src="https://media.istockphoto.com/id/956392390/photo/serious-hipster-african-doctor-holding-apples.webp?s=2048x2048&w=is&k=20&c=eSPH0Peg2U9FziRqZkvL14Dq_hveebHa48HD9H0-pm4="
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Dr.James </h5>
+            <p class="card-text">Experienced doctors providing compassionate care and expertise for optimal health</p>
+            
+              <a href="appointment.html" class="mu-btn btn-primary">Book Appoinment</a>
+  
+            
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="doc-card">
+          <img
+            src="https://media.istockphoto.com/id/465654317/photo/cardiologist.webp?s=2048x2048&w=is&k=20&c=PkDO-uxV5mO_6rqIGLx1tTueWxsdVp6CfRTtVp-Lv-s="
+            class=" card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Dr. Murti</h5>
+            <p class="card-text">Experienced doctors providing compassionate care and expertise for optimal health</p>
+            
+              <a href="appointment.html" class="mu-btn btn-primary">Book Appoinment</a>
+  
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- doctor section end -->
+
+  <script src="index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 
