--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthify</title>
     <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/icon.css">
     <link rel="stylesheet" href="/css/landingpg.css">
     <link rel="stylesheet" href="/css/nav.css">
